tests/derive/generic_type.stderr
error: run should not take generic arguments
 --> $DIR/generic_type.rs:4:7
  |
4 | fn run<T>() {}
  |       ^^^
