tests/derive/generic_type.rs
use shipyard::prelude::*;

#[system(Test)]
fn run<T>() {}

fn main() {}
